--- a/login.html
+++ b/login.html
@@ -276,15 +276,15 @@ document.addEventListener('keydown', e=>{
 <!-- Sidebar -->
 <nav id="sideMenu" class="side-menu">
   <ul>
-    <li><a href="#">📰 News & Announcements</a></li>
-    <li><a href="#">🎓 Student Portal</a></li>
-    <li><a href="#">📋 Admissions</a></li>
-    <li><a href="#">📘 Resources</a></li>
-    <li><a href="#">🌟 Showcase</a></li>
-    <li><a href="#">📞 Contact</a></li>
-    <li><a href="#">🗓️ Timetable</a></li>
-    <li><a href="#">👩‍🏫 Teacher Resources</a></li>
-    <li><a href="#">👨‍👩‍👧 Parent Portal</a></li>
+    <li><a href="index.html">📰 News & Announcements</a></li>
+    <li><a href="student-portal.html">🎓 Student Portal</a></li>
+    <li><a href="admissions.html">📋 Admissions</a></li>
+    <li><a href="resources.html">📘 Resources</a></li>
+    <li><a href="showcase.html">🌟 Showcase</a></li>
+    <li><a href="contact.html">📞 Contact</a></li>
+    <li><a href="class.html">🗓️ Timetable</a></li>
+    <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
+    <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
   </ul>
 </nav>
 
