--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ footer {
   <a href="showcase.html">Showcase</a>
   <a href="contact.html">Contact</a>
   <a href="class.html">Timetable</a>
-  <a href="teacher-resources.html">Teacher Resources</a>
+  <a href="resources.html">Teacher Resources</a>
   <a href="parent-portal.html">Parent Portal</a>
 </nav>
 
