--- a/class.html
+++ b/class.html
@@ -177,12 +177,15 @@
   <!-- Sidebar -->
   <nav id="sideMenu" class="side-menu">
     <span class="close-btn" onclick="closeMenu()">&times;</span>
-    <a href="index.html">Home</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="class.html" class="active">Classes</a>
-    <a href="teacher-resources.html">Teacher Resources</a>
-    <a href="parent-portal.html">Parent Portal</a>
-    <a href="contact.html">Contact</a>
+    <li><a href="index.html">📰 News & Announcements</a></li>
+    <li><a href="student-portal.html">🎓 Student Portal</a></li>
+    <li><a href="admissions.html">📋 Admissions</a></li>
+    <li><a href="resources.html">📘 Resources</a></li>
+    <li><a href="showcase.html">🌟 Showcase</a></li>
+    <li><a href="contact.html">📞 Contact</a></li>
+    <li><a href="class.html">🗓️ Timetable</a></li>
+    <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
+    <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
   </nav>
 
   <!-- Main Section -->
