--- a/exams.html
+++ b/exams.html
@@ -198,15 +198,15 @@
   <!-- Sidebar Menu -->
   <nav id="sideMenu" class="side-menu">
     <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-    <a href="index.html">News & Announcements</a>
-    <a href="student-portal.html">Student Portal</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="resources.html">Resources</a>
-    <a href="showcase.html">Showcase</a>
-    <a href="contact.html">Contact</a>
-    <a href="timetable.html">Timetable</a>
-    <a href="teacher-resources.html">Teacher Resources</a>
-    <a href="parent-portal.html">Parent Portal</a>
+    <li><a href="index.html">📰 News & Announcements</a></li>
+    <li><a href="student-portal.html">🎓 Student Portal</a></li>
+    <li><a href="admissions.html">📋 Admissions</a></li>
+    <li><a href="resources.html">📘 Resources</a></li>
+    <li><a href="showcase.html">🌟 Showcase</a></li>
+    <li><a href="contact.html">📞 Contact</a></li>
+    <li><a href="class.html">🗓️ Timetable</a></li>
+    <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
+    <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
   </nav>
 
   <header>
