--- a/auth.html
+++ b/auth.html
@@ -180,6 +180,7 @@
     <li><a href="class.html">🗓️ Timetable</a></li>
     <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
     <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
+  <li><a href="calculator1.html">🧮 calculator</a></li>
   </nav>
 
   <!-- 🔐 Login / Signup -->
