--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ footer {
     <li><a href="class.html">🗓️ Timetable</a></li>
     <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
     <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
-    <li><a href="calculator1.html">🧮 calculator</a></li>
+    <li><a href="calculator.html">🧮 calculator</a></li>
 </nav>
 
 <div id="main-content-wrapper"> 
