--- a/index.html
+++ b/index.html
@@ -329,6 +329,17 @@ footer {
     <li><a href="resources.html">👩‍🏫 Teacher Resources</a></li>
     <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
     <li><a href="calculator.html">🧮 calculator</a></li>
+    <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.7.html'">
+  Go to Page 2.7
+   </button>
+
+    <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.4.html'">
+  Go to Page 2.4
+   </button>
+
+    <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.2.html'">
+  Go to Page 2.2
+    </button>
 </nav>
 
 <div id="main-content-wrapper"> 
