--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@ body {
 }
 
 /* -------------------- Navbar -------------------- */
-.navbar {
+button {
+  background: #007bff;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background: #0056b3;
+}
+  .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
