--- a/index.html
+++ b/index.html
@@ -343,15 +343,15 @@ footer {
     <li><a href="parent-portal.html">👨‍👩‍👧 Parent Portal</a></li>
     <li><a href="calculator.html">🧮 calculator</a></li>
     <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.7.html'">
-  Go to Page 2.7
+  Google 🌍
    </button>
 
     <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.4.html'">
-  Go to Page 2.4
+  Assistant 🤖
    </button>
 
     <button onclick="window.location.href='https://bagendanicholas.github.io/My-website-/index2.2.html'">
-  Go to Page 2.2
+  Notebook 📓 
     </button>
 </nav>
 
