--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Super Explaining Calculator — Nicholas</title>
+  <title>Super Calculator — Nicholas</title>
 
   <!-- Casio-ish LCD font for display -->
   <link href="https://fonts.googleapis.com/css2?family=VT323&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -172,7 +172,7 @@
 <script>
 /* TRANSLATIONS & STATE */
 const translations = {
-  en:{ title:"🧮 Super Explaining Calculator — Steps", history:"History", stepsTitle:"Working Steps", resultLabel:"Result:", noCalc:"No calculation yet.", mem:"Memory", modeReal:"Realistic", modeDig:"Digital", themeDark:"Dark", themeLight:"Light", langShort:"EN 🇬🇧", compact:"Compact", verbose:"Verbose"},
+  en:{ title:"🧮 Super Calculator", history:"History", stepsTitle:"Working Steps", resultLabel:"Result:", noCalc:"No calculation yet.", mem:"Memory", modeReal:"Realistic", modeDig:"Digital", themeDark:"Dark", themeLight:"Light", langShort:"EN 🇬🇧", compact:"Compact", verbose:"Verbose"},
   lg:{ title:"🧮 Kalikulata — Enzira z'Okukola", history:"Ebyabaddibwa", stepsTitle:"Enzira z'Okukola", resultLabel:"Ekyavaamu:", noCalc:"Tewali kunonyebwa.", mem:"Obubonero", modeReal:"Realistic", modeDig:"Digital", themeDark:"Ddwaniro", themeLight:"Enkazi", langShort:"LG 🇺🇬", compact:"Mupiira", verbose:"Gulu"}
 };
 
