--- a/calculator.html
+++ b/calculator.html
@@ -65,7 +65,7 @@
   <div class="app">
     <div>
       <div class="controls">
-        <h1 id="title">🧮 Super Explaining Calculator — Steps</h1>
+        <h1 id="title">🧮 Super Calculator</h1>
 
         <div class="row">
           <button id="langBtn" class="switch-btn">EN 🇬🇧</button>
