--- a/index.html
+++ b/index.html
@@ -341,6 +341,13 @@ footer {
     </p>
 
     <div class="gallery">
+<div style="display: flex; flex-wrap: wrap; gap: 10px;">
+  <img src="https://i.postimg.cc/ncMtCh8Z/IMG-20251028-WA0021.jpg" alt="Blessing Day 1" width="300">
+  <img src="https://i.postimg.cc/zX31VGmN/IMG-20251028-WA0020.jpg" alt="Blessing Day 2" width="300">
+  <img src="https://i.postimg.cc/283fVSpf/IMG-20251028-WA0019.jpg" alt="Blessing Day 3" width="300">
+  <img src="https://i.postimg.cc/GpFWZBD7/file-00000000c018622f8ec6f55828286f85.png" alt="Graphic 1" width="300">
+  <img src="https://i.postimg.cc/FKXtWbY7/file-000000006dd862309587c04f14dd0a1e.png" alt="Graphic 2" width="300">
+</div>
       <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
       <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
       <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
